feat: add angular material & a custom theme

--- a/apps/harri-io/src/app/app.component.html
+++ b/apps/harri-io/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="header">
     HEADER
   </div>
-  <div class="main">
+  <main>
     <div
       *ngFor="let card of cards"
       class="crap-card"
@@ -11,7 +11,7 @@
       {{ card.name }}
       {{ card.content }}
     </div>
-  </div>
+  </main>
   <div class="footer">
     FOOTER RULES
   </div>
