--- a/apps/harri-io/src/styles.scss
+++ b/apps/harri-io/src/styles.scss
@@ -1,7 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import 'theme';
+
 body {
   margin: 0;
   height: 100vh;
   width: 100vw;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
+
+html,
+body {
+  height: 100%;
 }
