--- a/apps/harri-io/src/_theming/_theme.scss
+++ b/apps/harri-io/src/_theming/_theme.scss
@@ -2,7 +2,8 @@
 // For more information: https://material.angular.io/guide/theming
 @import '~@angular/material/theming';
 @import 'palettes';
-@import 'components/app.component.theme';
+@import 'global/body.theme';
+@import 'global/typography.theme';
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
@@ -10,17 +11,12 @@
 @include mat-core();
 
 // The warn palette is optional (defaults to red).
-$harri-io-warn: mat-palette($mat-red);
+$warn: mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$harri-io-theme: mat-dark-theme(
-  $harri-io-primary,
-  $harri-io-accent,
-  $harri-io-warn
-);
+$theme: mat-dark-theme($primary, $accent, $warn);
 
 // Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include angular-material-theme($harri-io-theme);
-@include hio-app-theme($harri-io-theme);
+@include angular-material-theme($theme);
+@include body-theme($theme);
+@include typography-theme($theme);
