feat: port over playlist-explorer

--- a/apps/harri-io/src/app/header/header.component.html
+++ b/apps/harri-io/src/app/header/header.component.html
@@ -2,4 +2,5 @@
   <a class="header__home-link" routerLink="/welcome">
     <img class="header__logo" src="assets/logo.png" />
   </a>
+  <a mat-button routerLink="/playlist-explorer">Playlist Explorer</a>
 </mat-toolbar>
