feat: movie-library boilerplate

--- a/apps/harri-io/src/app/header/header.component.html
+++ b/apps/harri-io/src/app/header/header.component.html
@@ -3,4 +3,5 @@
     <img class="header__logo" src="assets/logo.png" />
   </a>
   <a mat-button routerLink="/playlist-explorer">Playlist Explorer</a>
+  <a mat-button routerLink="/movie-library">Movie Library</a>
 </mat-toolbar>
