--- a/apps/harri-io/src/_theming/_theme.scss
+++ b/apps/harri-io/src/_theming/_theme.scss
@@ -4,6 +4,7 @@
 @import 'palettes';
 @import 'global/body.theme';
 @import 'global/typography.theme';
+@import 'components/mat-table-custom.component.theme';
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
@@ -20,3 +21,4 @@ $theme: mat-dark-theme($primary, $accent, $warn);
 @include angular-material-theme($theme);
 @include body-theme($theme);
 @include typography-theme($theme);
+@include mat-table-theme($theme);
