--- a/libs/movie-library/src/lib/components/movie-table/movie-table.component.html
+++ b/libs/movie-library/src/lib/components/movie-table/movie-table.component.html
@@ -16,7 +16,9 @@
       <!-- Title Column -->
       <ng-container matColumnDef="title">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Title</th>
-        <td mat-cell *matCellDef="let row">{{ row.title }}</td>
+        <td mat-cell *matCellDef="let row">
+          <a [routerLink]="'./details/' + row._id">{{ row.title }}</a>
+        </td>
       </ng-container>
 
       <!-- Released Column -->
@@ -46,7 +48,7 @@
 
       <!-- Delete Column -->
       <ng-container matColumnDef="delete">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+        <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let row">
           <button mat-icon-button (click)="deleteMovie(row)">
             <mat-icon>close</mat-icon>
