--- a/libs/movie-library/src/lib/containers/detail/detail.component.scss
+++ b/libs/movie-library/src/lib/containers/detail/detail.component.scss
@@ -2,3 +2,11 @@
 :host {
   @include container;
 }
+
+.detail__loading {
+  width: 100%;
+  min-height: inherit;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
