--- a/apps/harri-io/src/app/header/header.component.html
+++ b/apps/harri-io/src/app/header/header.component.html
@@ -4,4 +4,5 @@
   </a>
   <a mat-button routerLink="/playlist-explorer">Playlist Explorer</a>
   <a mat-button routerLink="/movie-library">Movie Library</a>
+  <a mat-button routerLink="/imported-module">imported-module</a>
 </mat-toolbar>
