--- a/apps/harri-io/src/_theming/_theme.scss
+++ b/apps/harri-io/src/_theming/_theme.scss
@@ -1,6 +1,6 @@
+@use '~@angular/material' as mat;
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@import '~@angular/material/theming';
 @import 'palettes';
 @import 'global/body.theme';
 @import 'global/typography.theme';
@@ -9,16 +9,16 @@
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat-core();
+@include mat.core();
 
 // The warn palette is optional (defaults to red).
-$warn: mat-palette($mat-red);
+$warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$theme: mat-dark-theme($primary, $accent, $warn);
+$theme: mat.define-dark-theme($primary, $accent, $warn);
 
 // Include theme styles for core and each component used in your app.
-@include angular-material-theme($theme);
+@include mat.all-component-themes($theme);
 @include body-theme($theme);
 @include typography-theme($theme);
-@include mat-table-theme($theme);
+@include mat.table-theme($theme);
