--- a/apps/harri-io/src/_theming/global/_body.theme.scss
+++ b/apps/harri-io/src/_theming/global/_body.theme.scss
@@ -1,11 +1,11 @@
-@import '~@angular/material/theming';
+@use '~@angular/material' as mat;
 
 @mixin body-theme($theme) {
   $background: map-get($theme, background);
   $foreground: map-get($theme, foreground);
 
   body {
-    background: mat-color($background, background);
-    color: mat-color($foreground, text);
+    background: mat.get-color-from-palette($background, background);
+    color: mat.get-color-from-palette($foreground, text);
   }
 }
