--- a/apps/harri-io/src/_theming/global/_typography.theme.scss
+++ b/apps/harri-io/src/_theming/global/_typography.theme.scss
@@ -1,4 +1,4 @@
-@import '~@angular/material/theming';
+@use '~@angular/material' as mat;
 
 @mixin typography-theme($theme) {
   $background: map-get($theme, background);
@@ -7,6 +7,6 @@
   $accent: map-get($theme, accent);
 
   a {
-    color: mat-color($accent, anchor);
+    color: mat.get-color-from-palette($accent, anchor);
   }
 }
