--- a/apps/harri-io/src/app/welcome/welcome.component.html
+++ b/apps/harri-io/src/app/welcome/welcome.component.html
@@ -1,1 +1,32 @@
-<h1>Harri IO</h1>
+<h1 class="mat-display-3">Harri IO</h1>
+
+<p class="mat-h2">
+  This is an interactive portfolio created by
+  <a href="https://www.linkedin.com/in/evansharrison">Harrison Evans</a>,
+  intended to show off some enterprise Angular concepts & examples.
+</p>
+
+<hr/>
+
+<h2>Tools in use here:</h2>
+
+<ul class="mat-h2">
+  <li>
+    <a href="https://angular.io/">
+      <img src="assets/angular.svg" />
+      Angular
+    </a>
+  </li>
+  <li>
+    <a href="https://material.io/design">
+      <img src="assets/material-logo.svg" />
+      Material Design
+    </a>
+  </li>
+  <li>
+    <a href="https://nx.dev/">
+      <img src="assets/nx-logo.svg" />
+      NX Workspace
+    </a>
+  </li>
+</ul>
