--- a/apps/harri-io/src/app/footer/footer.component.scss
+++ b/apps/harri-io/src/app/footer/footer.component.scss
@@ -37,8 +37,11 @@ mat-toolbar {
 }
 
 .footer__powered-by {
-  display: flex;
-  align-items: center;
+  a {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+  }
 }
 
 .footer__powered-icon {
