fix: scss warning

--- a/apps/harri-io/src/app/welcome/welcome.component.scss
+++ b/apps/harri-io/src/app/welcome/welcome.component.scss
@@ -27,7 +27,7 @@ ul {
   a {
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     margin-bottom: 0.5rem;
 
     img {
