feat: even cooler welcome page

--- a/apps/harri-io/src/app/welcome/welcome.component.html
+++ b/apps/harri-io/src/app/welcome/welcome.component.html
@@ -6,11 +6,11 @@
   intended to show off some enterprise Angular concepts & examples.
 </p>
 
-<hr/>
+<hr />
 
-<h2>Tools in use here:</h2>
+<p class="mat-h3">Notable libraries used in the making of this site:</p>
 
-<ul class="mat-h2">
+<ul class="mat-h3">
   <li>
     <a href="https://angular.io/">
       <img src="assets/angular.svg" />
@@ -18,9 +18,15 @@
     </a>
   </li>
   <li>
-    <a href="https://material.io/design">
-      <img src="assets/material-logo.svg" />
-      Material Design
+    <a href="https://https://material.angular.io">
+      <img src="assets/material.svg" />
+      Angular Material
+    </a>
+  </li>
+  <li>
+    <a href="https://https://material.angular.io/cdk/">
+      <img src="assets/cdk.svg" />
+      Angular CDK
     </a>
   </li>
   <li>
@@ -30,3 +36,13 @@
     </a>
   </li>
 </ul>
+
+<hr />
+
+<div class=" centered">
+  For looks, all credit goes to: &nbsp;
+  <a class="centered" href="https://material.io/design">
+    <img class="material-logo" src="assets/material-logo.svg" />
+    Material Design
+  </a>
+</div>
