--- a/apps/harri-io/src/app/welcome/welcome.component.html
+++ b/apps/harri-io/src/app/welcome/welcome.component.html
@@ -18,13 +18,13 @@
     </a>
   </li>
   <li>
-    <a href="https://https://material.angular.io">
+    <a href="https://material.angular.io">
       <img src="assets/material.svg" />
       Angular Material
     </a>
   </li>
   <li>
-    <a href="https://https://material.angular.io/cdk/">
+    <a href="https://material.angular.io/cdk/">
       <img src="assets/cdk.svg" />
       Angular CDK
     </a>
