--- a/apps/harri-io/src/app/header/header.component.html
+++ b/apps/harri-io/src/app/header/header.component.html
@@ -3,5 +3,6 @@
     <img class="header__logo" src="assets/logo.png" />
   </a>
   <a mat-button routerLink="/playlist-explorer">Playlist Explorer</a>
-  <a mat-button routerLink="/movie-library">Movie Library</a>
+  <!-- <a mat-button routerLink="/movie-library">Movie Library</a> -->
+  <a mat-button routerLink="/comment-trees">Comment Trees</a>
 </mat-toolbar>
