--- a/libs/comment-tree/src/lib/containers/comment-tree/comment-tree.component.scss
+++ b/libs/comment-tree/src/lib/containers/comment-tree/comment-tree.component.scss
@@ -1,7 +1,7 @@
 @import 'layout';
 
 :host {
-  height: $containerHeight;
+  height: $containerHeightNoMargin;
   display: flex;
   flex-direction: row;
   background: #e5e5e5;
@@ -9,7 +9,7 @@
 }
 
 harri-io-thread {
-  height: $containerHeight;
+  height: $containerHeightNoMargin;
   flex-grow: 1;
   flex-basis: 0;
   resize: horizontal;
@@ -18,6 +18,6 @@ harri-io-thread {
 ngs-code-editor {
   flex-grow: 1;
   flex-basis: 0;
-  height: $containerHeight;
+  height: $containerHeightNoMargin;
   max-width: 50%;
 }
